--- a/src/app/modules/admin/students/students.component.html
+++ b/src/app/modules/admin/students/students.component.html
@@ -1,35 +1,38 @@
 <div class="w-full mx-auto min-h-full flex flex-col max-w-6xl">
-  <div class="font-semibold text-gray-900 text-2xl mb-3">
-    {{ "Students" }}
-  </div>
-  <mat-form-field
-    class="w-full sm:w-96 mat-form-field--sm"
-    appearance="fill"
-    [floatLabel]="'always'"
-    [ngClass]=""
-  >
-    <input
-      matInput
-      type="text"
-      placeholder="Find by name or email"
-      name="search"
-      [formControl]="searchInput"
-      #search
-    />
-    <button matPrefix type="button">
-      <mat-icon [svgIcon]="'mat_outline:search'">
-      </mat-icon>
-    </button>
-    <button
-      matSuffix
-      mat-icon-button
-      type="button"
-      *ngIf="search.value !== ''"
-      (click)="searchInput.setValue('')"
+  <div class="flex gap-4 flex-wrap md:flex-nowrap justify-between">
+    <div class="font-semibold text-gray-900 text-2xl mb-3 w-full">
+      {{ "Students" }}
+    </div>
+    <mat-form-field
+      class="w-full sm:w-96 mat-form-field--sm"
+      appearance="fill"
+      [floatLabel]="'always'"
+      [ngClass]=""
     >
-      <mat-icon class="icon-size-5" [svgIcon]="'mat_outline:close'"> </mat-icon>
-    </button>
-  </mat-form-field>
+      <input
+        matInput
+        type="text"
+        placeholder="Find by name or email"
+        name="search"
+        [formControl]="searchInput"
+        #search
+      />
+      <button matPrefix type="button">
+        <mat-icon [svgIcon]="'mat_outline:search'"> </mat-icon>
+      </button>
+      <button
+        matSuffix
+        mat-icon-button
+        type="button"
+        *ngIf="search.value !== ''"
+        (click)="searchInput.setValue('')"
+      >
+        <mat-icon class="icon-size-5" [svgIcon]="'mat_outline:close'">
+        </mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+
   <div class="flex-grow">
     <table
       mat-table
@@ -78,7 +81,12 @@
         <th mat-header-cell *matHeaderCellDef class="w-40">Action</th>
         <td mat-cell *matCellDef="let element; let i = index">
           <div class="flex gap-3">
-            <button mat-button color="primary" class="btn--sm btn--soft" routerLink="{{'1'}}">
+            <button
+              mat-button
+              color="primary"
+              class="btn--sm btn--soft"
+              routerLink="{{ '1' }}"
+            >
               Edit
             </button>
             <button
