--- a/src/app/modules/common/change-password/change-password.component.html
+++ b/src/app/modules/common/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <div class="w-full h-full flex flex-col max-w-md">
-  <div class="font-semibold text-gray-900 text-xl mb-3">
+  <div class="font-medium text-gray-900 text-xl mb-3">
     {{ "ChangePassword.Title" | translate }}
   </div>
 
