update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -26,10 +26,10 @@
       </div>
     </div>
     <div
-      class="w-full max-w-sm"
+      class="w-full max-w-md sm:bg-white sm:p-10 sm:py-12 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
     >
       <div class="flex flex-col gap-3 text-center">
-        <div class="font-semibold text-gray-900 text-2xl">
+        <div class="font-medium text-gray-900 text-2xl">
           {{ "ForgotPassword.Title" | translate }}
         </div>
         <div class="text-gray-600">
@@ -52,15 +52,15 @@
           <input matInput name="email" formControlName="email" #email />
           <mat-error
             *ngIf="forgotPasswordForm.get('email')?.hasError('required')"
-            >{{ "Errors.Required" | translate }}</mat-error
+            >{{ "Error.Required" | translate }}</mat-error
           >
           <mat-error
             *ngIf="forgotPasswordForm.get('email')?.hasError('email')"
-            >{{ "Errors.Email" | translate }}</mat-error
+            >{{ "Error.Email" | translate }}</mat-error
           >
           <mat-error
             *ngIf="forgotPasswordForm.get('email')?.hasError('notFoundEmail')"
-            >{{ "Errors.NotFoundEmail" | translate }}</mat-error
+            >{{ "Error.NotFoundEmail" | translate }}</mat-error
           >
           <button
             mat-icon-button
@@ -105,7 +105,7 @@
           [disabled]="forgotPasswordForm.disabled"
         >
           <span *ngIf="!forgotPasswordForm.disabled">
-            {{ "Actions.Continue" | translate }}
+            {{ "Action.Continue" | translate }}
           </span>
           <mat-progress-spinner
             *ngIf="forgotPasswordForm.disabled"
