--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -12,10 +12,10 @@
         <languages></languages>
       </div>
     </div>
-    <div class="w-full max-w-sm">
+    <div class="w-full max-w-md sm:bg-white sm:p-10 sm:py-12 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200">
       <ng-container *ngIf="!isChanged">
         <div class="flex flex-col gap-3 text-center">
-          <div class="font-semibold text-gray-900 text-2xl">
+          <div class="font-medium text-gray-900 text-2xl">
             {{ "PasswordReset.Title" | translate }}
           </div>
           <div class="text-gray-600">
@@ -61,13 +61,13 @@
             <mat-error
               *ngIf="passwordResetForm.get('password')?.hasError('required')"
             >
-              {{ "Errors.Required" | translate }}
+              {{ "Error.Required" | translate }}
             </mat-error>
             <mat-error
               *ngIf="passwordResetForm.get('password')?.hasError('minlength')"
             >
               {{
-                "Errors.MinLength"
+                "Error.MinLength"
                   | translate
                     : {
                         control: ("PasswordReset.Password" | translate),
@@ -112,7 +112,7 @@
                 passwordResetForm.get('confirmPassword')?.hasError('required')
               "
             >
-              {{ "Errors.Required" | translate }}
+              {{ "Error.Required" | translate }}
             </mat-error>
             <mat-error
               *ngIf="
@@ -120,7 +120,7 @@
               "
             >
               {{
-                "Errors.MustMatch"
+                "Error.MustMatch"
                   | translate
                     : {
                         control: ("PasswordReset.Password" | translate),
@@ -137,7 +137,7 @@
             [disabled]="passwordResetForm.disabled"
           >
             <span *ngIf="!passwordResetForm.disabled">
-              {{ "Actions.Continue" | translate }}
+              {{ "Action.Continue" | translate }}
             </span>
             <mat-progress-spinner
               *ngIf="passwordResetForm.disabled"
@@ -168,7 +168,7 @@
             [color]="'primary'"
             routerLink="/login"
           >
-            {{ "Actions.Login" | translate }}
+            {{ "Action.Login" | translate }}
           </button>
         </div>
       </ng-container>
