--- a/src/app/components/image-cropper/image-cropper.component.html
+++ b/src/app/components/image-cropper/image-cropper.component.html
@@ -48,7 +48,7 @@
         [color]="'primary'"
         tabindex="0"
       >
-        {{ "Actions.Cancel" | translate }}
+        {{ "Action.Cancel" | translate }}
       </button>
       <button
         type="button"
@@ -58,7 +58,7 @@
         (click)="confirm()"
         tabindex="0"
       >
-        {{ "Actions.Confirm" | translate }}
+        {{ "Action.Confirm" | translate }}
       </button>
     </div>
   </div>
