--- a/src/app/components/languages/languages.component.html
+++ b/src/app/components/languages/languages.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button [matMenuTriggerFor]="languagesMenu">
+<button class="btn--lg" mat-icon-button [matMenuTriggerFor]="languagesMenu">
   <div class="w-6 overflow-hidden">
     <img
       class="w-full"
