--- a/src/app/modules/common/change-password/change-password.component.html
+++ b/src/app/modules/common/change-password/change-password.component.html
@@ -1,10 +1,10 @@
-<div class="w-full h-full flex flex-col max-w-md">
+<div class="w-full h-full flex flex-col max-w-md bg-white rounded-md px-6 py-8 shadow-sm border border-solid border-gray-200">
   <div class="font-medium text-gray-900 text-xl mb-3">
     {{ "ChangePassword.Title" | translate }}
   </div>
 
   <form [formGroup]="changePasswordForm" (ngSubmit)="submit()" class="flex flex-col">
-    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
+    <mat-form-field appearance="fill" class="w-full">
       <mat-label>{{ "ChangePassword.CurrentPassword" | translate }}</mat-label>
       <input
         matInput
@@ -36,10 +36,10 @@
       <mat-error
         *ngIf="changePasswordForm.get('currentPassword')?.hasError('required')"
       >
-        {{ "Errors.Required" | translate }}
+        {{ "Error.Required" | translate }}
       </mat-error>
     </mat-form-field>
-    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
+    <mat-form-field appearance="fill" class="w-full">
       <mat-label>{{ "ChangePassword.NewPassword" | translate }}</mat-label>
       <input
         matInput
@@ -71,13 +71,13 @@
       <mat-error
         *ngIf="changePasswordForm.get('newPassword')?.hasError('required')"
       >
-        {{ "Errors.Required" | translate }}
+        {{ "Error.Required" | translate }}
       </mat-error>
       <mat-error
         *ngIf="changePasswordForm.get('newPassword')?.hasError('minlength')"
       >
         {{
-          "Errors.MinLength"
+          "Error.MinLength"
             | translate
               : {
                   control: ("ChangePassword.NewPassword" | translate),
@@ -86,7 +86,7 @@
         }}
       </mat-error>
     </mat-form-field>
-    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
+    <mat-form-field appearance="fill" class="w-full">
       <mat-label>{{
         "ChangePassword.ConfirmNewPassword" | translate
       }}</mat-label>
@@ -122,7 +122,7 @@
           changePasswordForm.get('confirmNewPassword')?.hasError('required')
         "
       >
-        {{ "Errors.Required" | translate }}
+        {{ "Error.Required" | translate }}
       </mat-error>
       <mat-error
         *ngIf="
@@ -130,7 +130,7 @@
         "
       >
         {{
-          "Errors.MustMatch"
+          "Error.MustMatch"
             | translate
               : {
                   control: ("ChangePassword.NewPassword" | translate),
@@ -140,7 +140,7 @@
         }}
       </mat-error>
     </mat-form-field>
-    <div class="flex justify-center">
+    <div class="mt-2 flex justify-center">
       <button
         type="submit"
         class="btn--lg w-full"
@@ -149,7 +149,7 @@
         [disabled]="changePasswordForm.disabled"
       >
         <span *ngIf="!changePasswordForm.disabled">
-          {{ "Actions.Change" | translate }}
+          {{ "Action.Change" | translate }}
         </span>
 
         <mat-progress-spinner
