--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,8 +26,10 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-sm">
-      <div class="font-semibold text-gray-900 text-2xl text-center">
+    <div
+      class="w-full max-w-md sm:bg-white sm:p-10 sm:py-12 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
+    >
+      <div class="font-medium text-gray-900 text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
 
@@ -46,10 +48,10 @@
           <mat-label>Email</mat-label>
           <input matInput name="email" formControlName="email" />
           <mat-error *ngIf="loginForm.get('email')?.hasError('required')">{{
-            "Errors.Required" | translate
+            "Error.Required" | translate
           }}</mat-error>
           <mat-error *ngIf="loginForm.get('email')?.hasError('email')">{{
-            "Errors.Email" | translate
+            "Error.Email" | translate
           }}</mat-error>
         </mat-form-field>
 
@@ -84,7 +86,7 @@
             ></mat-icon>
           </button>
           <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-            {{ "Errors.Required" | translate }}
+            {{ "Error.Required" | translate }}
           </mat-error>
         </mat-form-field>
         <div class="text-right">
@@ -100,7 +102,7 @@
           [disabled]="loginForm.disabled"
         >
           <span *ngIf="!loginForm.disabled">
-            {{ "Actions.Continue" | translate }}
+            {{ "Action.Continue" | translate }}
           </span>
           <mat-progress-spinner
             *ngIf="loginForm.disabled"
