--- a/src/app/modules/admin/tutors/tutors.component.html
+++ b/src/app/modules/admin/tutors/tutors.component.html
@@ -1,10 +1,10 @@
 <div class="w-full mx-auto min-h-full flex flex-col max-w-6xl">
   <div class="flex gap-4 flex-wrap md:flex-nowrap justify-between">
-    <div class="font-semibold text-gray-900 text-2xl mb-3 w-full">
-      {{ "Tutors" }}
+    <div class="font-medium text-gray-900 text-2xl mb-3 w-full">
+      {{ "Tutor.Titles" | translate }}
     </div>
     <mat-form-field
-      class="w-full sm:w-96 mat-form-field--sm"
+      class="w-full sm:w-1/2 mat-form-field--sm"
       appearance="fill"
       [floatLabel]="'always'"
       [ngClass]=""
@@ -12,7 +12,7 @@
       <input
         matInput
         type="text"
-        placeholder="Find by name or email"
+        [placeholder]="'Tutor.SearchPlaceholder' | translate"
         name="search"
         [formControl]="searchInput"
         #search
@@ -33,94 +33,149 @@
     </mat-form-field>
   </div>
   <div class="flex-grow">
-    <table
-      mat-table
-      [dataSource]="dataSource"
-      class="w-full border border-solid border-gray-200 rounded"
-      matSort
+    <div
+      class="border border-solid border-gray-200 rounded-md shadow-sm overflow-hidden"
     >
-      <ng-container matColumnDef="photo">
-        <th mat-header-cell *matHeaderCellDef>Photo</th>
-        <td mat-cell *matCellDef="let element; let i = index">
-          <div>
-            <img
-              *ngIf="element?.avatarUrl"
-              class="w-9 h-9 rounded-full overflow-hidden"
-              [src]="element?.avatarUrl"
-              alt=""
-            />
-            <div
-              *ngIf="!element?.avatarUrl"
-              class="w-9 h-9 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
+      <div class="overflow-auto">
+        <table mat-table [dataSource]="dataSource" class="w-full" matSort>
+          <ng-container matColumnDef="no">
+            <th mat-header-cell *matHeaderCellDef class="w-24">
+              {{ "Table.No" | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              {{
+                i +
+                  1 +
+                  paginationConfig.itemsPerPage *
+                    (paginationConfig.currentPage - 1)
+              }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="photo">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ "Table.Photo" | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <div>
+                <img
+                  *ngIf="element?.avatarUrl"
+                  class="w-9 h-9 rounded-full overflow-hidden"
+                  [src]="element?.avatarUrl"
+                  alt=""
+                />
+                <div
+                  *ngIf="!element?.avatarUrl"
+                  class="w-9 h-9 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
+                >
+                  {{ element?.firstName?.charAt(0) || "H" }}
+                </div>
+              </div>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ "Table.Name" | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <a class="font-medium" routerLink="1">
+                {{ "Hiep Nguyen" }}
+              </a>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>Email</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              {{ "nguyenchinhhiep95@gmail.com" }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef class="w-40">
+              {{ "Table.Status" | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <!-- <div class="tag" [ngClass]="getStatus(element).class">
+                {{ getStatus(element).translateKey | translate }}
+              </div> -->
+              <div class="tag tag--warning">Pending</div>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="action" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef class="w-24">
+              {{ "Table.Action" | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <button mat-icon-button [matMenuTriggerFor]="actionMenu">
+                <mat-icon [svgIcon]="'mat_outline:more_vert'"></mat-icon>
+              </button>
+
+              <mat-menu #actionMenu="matMenu" [xPosition]="'before'">
+                <ng-template matMenuContent>
+                  <button type="button" mat-menu-item>
+                    <mat-icon
+                      class="text-primary"
+                      svgIcon="mat_outline:done"
+                    ></mat-icon>
+                    <span>{{ "Action.Approve" | translate }}</span>
+                  </button>
+                  <button type="button" mat-menu-item>
+                    <mat-icon
+                      class="text-warn"
+                      svgIcon="mat_outline:close"
+                    ></mat-icon>
+                    <span>{{ "Action.Reject" | translate }}</span>
+                  </button>
+                  <button type="button" mat-menu-item>
+                    <mat-icon
+                      class="text-danger"
+                      svgIcon="mat_outline:edit"
+                    ></mat-icon>
+                    <span>{{ "Action.Edit" | translate }}</span>
+                  </button>
+                  <button
+                    type="button"
+                    mat-menu-item
+                    mat-menu-item
+                    (click)="delete(element)"
+                  >
+                    <mat-icon
+                      class="text-danger"
+                      svgIcon="mat_outline:delete"
+                    ></mat-icon>
+                    <span>{{ "Action.Delete" | translate }}</span>
+                  </button>
+                </ng-template>
+              </mat-menu>
+            </td>
+          </ng-container>
+
+          <tr
+            mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: false"
+          ></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          <tr class="mat-row" *matNoDataRow>
+            <td
+              class="mat-cell text-center"
+              [attr.colspan]="displayedColumns.length"
             >
-              {{ element?.firstName?.charAt(0) || "H" }}
-            </div>
-          </div>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element; let i = index"></td>
-      </ng-container>
-
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element; let i = index"></td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef class="w-40">Status</th>
-        <td mat-cell *matCellDef="let element; let i = index">
-          <div class="tag tag--danger">Inactive</div>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="action" stickyEnd>
-        <th mat-header-cell *matHeaderCellDef class="w-40">Action</th>
-        <td mat-cell *matCellDef="let element; let i = index">
-          <div class="flex gap-3">
-            <button
-              mat-button
-              color="primary"
-              class="btn--sm btn--soft"
-              routerLink="1"
-            >
-              Edit
-            </button>
-            <button
-              mat-button
-              color="accent"
-              class="btn--sm btn--soft"
-              (click)="delete(element)"
-            >
-              Delete
-            </button>
-          </div>
-        </td>
-      </ng-container>
-
-      <tr
-        mat-header-row
-        *matHeaderRowDef="displayedColumns; sticky: false"
-      ></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td
-          class="mat-cell text-center"
-          [attr.colspan]="displayedColumns.length"
-        >
-          No data
-        </td>
-      </tr>
-    </table>
+              {{ "Table.NoData" | translate }}
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
   <ng-container
     *ngFor="let item of dataSource.data | paginate : paginationConfig"
   ></ng-container>
   <div class="mt-6 flex gap-4 items-center justify-between">
     <div class="text-gray-500 text-sm">
-      {{ "1" }} to {{ "11" }} of {{ "65" }} records
+      {{ "1" }} {{ "Table.To" | translate }} {{ "11" }}
+      {{ "Table.Of" | translate }} {{ "65" }} {{ "Table.Records" | translate }}
     </div>
     <pagination-controls
       (pageChange)="onPageChanged($event)"
