--- a/src/app/modules/common/settings/settings.component.html
+++ b/src/app/modules/common/settings/settings.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col w-full max-w-6xl mx-auto overflow-hidden">
   <div class="flex-grow flex-wrap flex gap-8">
     <div class="flex flex-col w-64 flex-shrink-0">
-      <div class="font-semibold text-gray-900 text-2xl mb-4">
+      <div class="font-medium text-gray-900 text-2xl mb-4">
         {{ "Settings.Title" | translate }}
       </div>
       <a
