--- a/src/app/modules/common/user-profile/user-profile.component.html
+++ b/src/app/modules/common/user-profile/user-profile.component.html
@@ -1,69 +1,66 @@
-<div class="w-full h-full flex flex-col max-w-md">
+<div
+  class="w-full h-full flex flex-col max-w-md bg-white rounded-md px-6 py-8 shadow-sm border border-solid border-gray-200"
+>
   <div class="font-medium text-gray-900 text-xl mb-3">
     {{ "UserProfile.Title" | translate }}
   </div>
 
   <form [formGroup]="profileForm" class="flex flex-col">
-    <div class="flex flex-col gap-2 mb-2">
-      <div class="text-gray-500">Profile picture</div>
-      <div
-        class="rounded border border-solid bg-white border-gray-300 px-6 py-4 flex flex-col items-center shadow-sm"
-      >
-        <div class="flex flex-col gap-4 items-center">
-          <img
-            *ngIf="profileForm.get('profilePictureUrl')?.value"
-            class="w-16 h-16 rounded-full overflow-hidden"
-            [src]="profileForm.get('profilePictureUrl')?.value"
-            alt=""
-          />
-          <div
-            *ngIf="!profileForm.get('profilePictureUrl')?.value"
-            class="w-16 h-16 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase text-2xl"
-          >
-            {{ profileForm.get("firstName")?.value?.charAt(0) || "H" }}
-          </div>
-
-          <div class="flex gap-4 justify-center">
-            <!-- Remove image -->
-            <button
-              *ngIf="profileForm.get('profilePictureUrl')?.value"
-              type="button"
-              class="btn--sm"
-              mat-button
-              [color]="'primary'"
-              (click)="onRemoveProfilePicture()"
-            >
-              Remove
-            </button>
-
-            <button
-              type="button"
-              class="btn--sm"
-              mat-flat-button
-              [color]="'primary'"
-              (click)="uploadProfilePictureFile.click()"
-            >
-              {{
-                profileForm.get("profilePictureUrl")?.value
-                  ? ("FileUpload.Change" | translate)
-                  : ("FileUpload.BrowseFiles" | translate)
-              }}
-            </button>
-          </div>
+    <div class="mb-4">
+      <div class="flex gap-5 items-center">
+        <img
+          *ngIf="profileForm.get('profilePictureUrl')?.value"
+          class="w-20 h-20 rounded-full overflow-hidden"
+          [src]="profileForm.get('profilePictureUrl')?.value"
+          alt=""
+        />
+        <div
+          *ngIf="!profileForm.get('profilePictureUrl')?.value"
+          class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase text-2xl"
+        >
+          {{ profileForm.get("firstName")?.value?.charAt(0) || "H" }}
         </div>
 
-        <input
-          hidden
-          type="file"
-          accept="image/*"
-          #uploadProfilePictureFile
-          (change)="
-            onProfilePictureFileSelected($event, uploadProfilePictureFile)
-          "
-        />
+        <div class="flex gap-2 justify-center">
+          <!-- Change image -->
+          <button
+            type="button"
+            class="btn--sm"
+            mat-stroked-button
+            [color]="'primary'"
+            (click)="uploadProfilePictureFile.click()"
+          >
+            {{
+              profileForm.get("profilePictureUrl")?.value
+                ? ("FileUpload.Change" | translate)
+                : ("FileUpload.AddAPhoto" | translate)
+            }}
+          </button>
+          <!-- Remove image -->
+          <button
+            *ngIf="profileForm.get('profilePictureUrl')?.value"
+            type="button"
+            class="btn--sm"
+            mat-button
+            (click)="onRemoveProfilePicture()"
+          >
+            <div class="text-danger">Remove</div>
+          </button>
+        </div>
       </div>
+
+      <input
+        hidden
+        type="file"
+        accept="image/*"
+        #uploadProfilePictureFile
+        (change)="
+          onProfilePictureFileSelected($event, uploadProfilePictureFile)
+        "
+      />
     </div>
-    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
+
+    <mat-form-field appearance="fill" class="w-full">
       <mat-label>{{ "UserProfile.FirstName" | translate }}</mat-label>
       <input
         matInput
@@ -84,10 +81,10 @@
         ></mat-icon>
       </button>
       <mat-error *ngIf="profileForm.get('firstName')?.hasError('required')">{{
-        "Errors.Required" | translate
+        "Error.Required" | translate
       }}</mat-error>
     </mat-form-field>
-    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
+    <mat-form-field appearance="fill" class="w-full">
       <mat-label>{{ "UserProfile.LastName" | translate }}</mat-label>
       <input matInput formControlName="lastName" appPreventAutoFill #lastName />
       <button
@@ -103,20 +100,20 @@
         ></mat-icon>
       </button>
       <mat-error *ngIf="profileForm.get('lastName')?.hasError('required')">{{
-        "Errors.Required" | translate
+        "Error.Required" | translate
       }}</mat-error>
     </mat-form-field>
-    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
+    <mat-form-field appearance="fill" class="w-full">
       <mat-label>Email</mat-label>
       <input matInput name="email" formControlName="email" #email />
       <mat-error *ngIf="profileForm.get('email')?.hasError('required')">
-        {{ "Errors.Required" | translate }}
+        {{ "Error.Required" | translate }}
       </mat-error>
       <mat-error *ngIf="profileForm.get('email')?.hasError('email')">{{
-        "Errors.Email" | translate
+        "Error.Email" | translate
       }}</mat-error>
       <mat-error *ngIf="profileForm.get('email')?.hasError('existingEmail')">{{
-        "Errors.ExistingEmail" | translate
+        "Error.ExistingEmail" | translate
       }}</mat-error>
 
       <button
@@ -150,7 +147,7 @@
       >
       </mat-progress-spinner>
     </mat-form-field>
-    <div class="flex justify-center">
+    <div class="mt-2 flex justify-center">
       <button
         type="submit"
         class="btn--lg w-full"
@@ -159,7 +156,7 @@
         [disabled]="profileForm.disabled"
       >
         <span *ngIf="!profileForm.disabled">
-          {{ "Actions.Save" | translate }}
+          {{ "Action.Save" | translate }}
         </span>
 
         <mat-progress-spinner
