update something new

--- a/src/app/modules/admin/students/students.component.html
+++ b/src/app/modules/admin/students/students.component.html
@@ -78,7 +78,9 @@
               {{ "Table.Name" | translate }}
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
-              {{ "Hiep Nguyen" }}
+              <a routerLink="1">
+                {{ "Hiep Nguyen" }}
+              </a>
             </td>
           </ng-container>
 
