--- a/src/app/layout/layouts/admin/admin.component.html
+++ b/src/app/layout/layouts/admin/admin.component.html
@@ -17,7 +17,7 @@
       </vertical-navigation>
     </div>
     <!-- Main -->
-    <div class="flex-grow p-6 overflow-auto" scrollReset>
+    <div class="flex-grow md:p-6 p-4 overflow-auto" scrollReset>
       <router-outlet *ngIf="true"></router-outlet>
     </div>
   </div>
