--- a/src/app/modules/admin/settings/change-password/change-password.component.html
+++ b/src/app/modules/admin/settings/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full flex flex-col max-w-md bg-white rounded-md px-6 py-8 shadow-sm border border-solid border-gray-200">
+<div class="w-full h-full flex flex-col max-w-lg bg-white rounded-md p-6 shadow-sm border border-solid border-gray-200">
   <div class="font-medium text-gray-900 text-xl mb-3">
     {{ "ChangePassword.Title" | translate }}
   </div>
