--- a/src/app/modules/admin/settings/settings.component.html
+++ b/src/app/modules/admin/settings/settings.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col w-full max-w-6xl mx-auto overflow-hidden">
+  <div class="flex flex-col w-full max-w-6xl mx-auto overflow-hidden">
   <div class="flex-grow flex-wrap flex gap-8">
     <div class="flex flex-col w-64 flex-shrink-0">
       <div class="font-medium text-gray-900 text-2xl mb-4">
-        {{ "Settings.Title" | translate }}
+        {{ "Settings.AccountSettings" | translate }}
       </div>
       <a
         class="mb-2 flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-gray-500 cursor-pointer hover:bg-gray-200"
@@ -14,7 +14,9 @@
           routerLinkActive="!text-primary font-medium"
           [svgIcon]="item.icon"
         ></mat-icon>
-        <div routerLinkActive="text-primary font-medium">{{ item.label }}</div>
+        <div routerLinkActive="text-primary font-medium">
+          {{ item.translateKey | translate }}
+        </div>
       </a>
     </div>
     <div class="flex-grow">
