--- a/src/app/modules/admin/students/student-profile/student-profile.component.html
+++ b/src/app/modules/admin/students/student-profile/student-profile.component.html
@@ -2,7 +2,7 @@
   <div class="flex-grow flex-wrap flex gap-8">
     <div class="flex flex-col w-64 flex-shrink-0">
       <div class="font-medium text-gray-900 text-2xl mb-4">
-        {{ "TutorInfo.TutorProfile" | translate }}
+        {{ "StudentInfo.StudentProfile" | translate }}
       </div>
       <a
         class="mb-2 flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-gray-500 cursor-pointer hover:bg-gray-200"
