--- a/src/app/modules/admin/tutors/tutors.component.html
+++ b/src/app/modules/admin/tutors/tutors.component.html
@@ -78,7 +78,7 @@
               {{ "Table.Name" | translate }}
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <a class="font-medium" routerLink="1">
+              <a routerLink="1">
                 {{ "Hiep Nguyen" }}
               </a>
             </td>
