--- a/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
@@ -40,7 +40,6 @@
         labelPosition="bottom"
         [linear]="true"
         animationDuration="0"
-        (selectionChange)="onStepChanged()"
       >
         <ng-template matStepperIcon="edit">
           <mat-icon class="text-white" svgIcon="mat_outline:edit"></mat-icon>
@@ -56,6 +55,84 @@
             <div class="flex justify-center -mx-6 sm:px-6">
               <div class="w-full mt-4">
                 <form [formGroup]="tutorBasicInfoForm">
+                  <div class="flex flex-col gap-2 mb-4">
+                    <div class="text-gray-500 flex gap-1 items-center">
+                      {{ "TutorInfo.ProfilePicture" | translate }}
+                      <span class="text-gray-400 font-normal text-sm"
+                        >({{
+                          "FileUpload.MaxSize" | translate : { maxSize: "2MB" }
+                        }})</span
+                      >
+                    </div>
+                    <div
+                      class="rounded border border-solid bg-white border-gray-300 p-4 flex flex-col items-center justify-center shadow-sm"
+                    >
+                      <div class="flex flex-col gap-6 items-center">
+                        <div class="w-24 h-24 relative">
+                          <mat-icon
+                            *ngIf="
+                              !tutorBasicInfoForm.get('profilePictureUrl')
+                                ?.value
+                            "
+                            class="icon-size-24 text-gray-200"
+                            svgIcon="mat_outline:account_circle"
+                          ></mat-icon>
+                          <img
+                            class="w-full h-full rounded-full overflow-hidden object-cover"
+                            *ngIf="
+                              tutorBasicInfoForm.get('profilePictureUrl')?.value
+                            "
+                            [src]="
+                              tutorBasicInfoForm.get('profilePictureUrl')?.value
+                            "
+                            alt="Profile picture"
+                          />
+                        </div>
+                        <div class="flex gap-4 justify-center">
+                          <!-- Remove image -->
+                          <button
+                            *ngIf="
+                              tutorBasicInfoForm.get('profilePictureUrl')?.value
+                            "
+                            type="button"
+                            class="btn btn--sm"
+                            mat-button
+                            [color]="'primary'"
+                            (click)="onRemoveProfilePicture()"
+                          >
+                            Remove
+                          </button>
+
+                          <button
+                            type="button"
+                            class="btn btn--sm"
+                            mat-flat-button
+                            [color]="'primary'"
+                            (click)="uploadProfilePictureFile.click()"
+                          >
+                            {{
+                              tutorBasicInfoForm.get("profilePictureUrl")?.value
+                                ? ("FileUpload.Change" | translate)
+                                : ("FileUpload.BrowseFiles" | translate)
+                            }}
+                          </button>
+                        </div>
+                      </div>
+
+                      <input
+                        hidden
+                        type="file"
+                        accept="image/*"
+                        #uploadProfilePictureFile
+                        (change)="
+                          onProfilePictureFileSelected(
+                            $event,
+                            uploadProfilePictureFile
+                          )
+                        "
+                      />
+                    </div>
+                  </div>
                   <mat-form-field
                     appearance="fill"
                     class="w-full"
@@ -379,7 +456,7 @@
                     </div>
                     <div class="flex flex-col">
                       <div
-                        class="rounded border border-solid bg-white border-gray-300 p-6 flex flex-col gap-2 items-center justify-center relative shadow-sm"
+                        class="rounded border border-solid bg-white border-gray-300 p-4 flex flex-col gap-2 items-center justify-center relative shadow-sm"
                         [ngClass]="
                           isOnDropFilesContainer
                             ? '!border-primary !bg-gray-50'
@@ -391,7 +468,7 @@
                         (drop)="onDrop($event)"
                       >
                         <mat-icon
-                          class="icon-size-12"
+                          class="icon-size-12 text-hint"
                           svgIcon="mat_outline:upload_file"
                         ></mat-icon>
                         <div class="text-base">
@@ -401,6 +478,7 @@
                           {{ "FileUpload.Or" | translate }}
                         </div>
                         <button
+                          type="button"
                           mat-flat-button
                           [color]="'primary'"
                           class="btn btn--sm"
@@ -414,7 +492,7 @@
                           type="file"
                           accept=".pdf"
                           #uploadFile
-                          (change)="onFileSelected($event, uploadFile)"
+                          (change)="onCertificatesSelected($event, uploadFile)"
                         />
                       </div>
                       <div
@@ -448,7 +526,7 @@
                             <button
                               mat-icon-button
                               type="button"
-                              (click)="removeFile(i)"
+                              (click)="removeCertificate(i)"
                             >
                               <mat-icon
                                 class="text-danger"
@@ -521,88 +599,6 @@
             <div class="flex justify-center -mx-6 sm:px-6">
               <div class="w-full mt-4">
                 <form [formGroup]="tutorAdditionalInfoForm">
-                  <div class="flex flex-col gap-2 mb-4">
-                    <div class="text-gray-500 flex gap-1 items-center">
-                      {{ "TutorInfo.ProfilePicture" | translate }}
-                      <span class="text-gray-400 font-normal text-sm"
-                        >({{
-                          "FileUpload.MaxSize" | translate : { maxSize: "2MB" }
-                        }})</span
-                      >
-                    </div>
-                    <div
-                      class="rounded border border-solid bg-white border-gray-300 p-6 flex flex-col items-center justify-center shadow-sm"
-                    >
-                      <div class="flex flex-col gap-6 items-center">
-                        <div class="w-24 h-24 relative">
-                          <mat-icon
-                            *ngIf="
-                              !tutorAdditionalInfoForm.get('profilePictureUrl')
-                                ?.value
-                            "
-                            class="icon-size-24 text-gray-200"
-                            svgIcon="mat_outline:account_circle"
-                          ></mat-icon>
-                          <img
-                            class="w-full h-full rounded-full overflow-hidden object-cover"
-                            *ngIf="
-                              tutorAdditionalInfoForm.get('profilePictureUrl')
-                                ?.value
-                            "
-                            [src]="
-                              tutorAdditionalInfoForm.get('profilePictureUrl')
-                                ?.value
-                            "
-                            alt="Profile picture"
-                          />
-                        </div>
-                        <div class="flex gap-4 justify-center">
-                          <!-- Remove image -->
-                          <button
-                            *ngIf="
-                              tutorAdditionalInfoForm.get('profilePictureUrl')
-                                ?.value
-                            "
-                            type="button"
-                            class="btn btn--sm"
-                            mat-button
-                            [color]="'primary'"
-                            (click)="onRemoveProfilePicture()"
-                          >
-                            Remove
-                          </button>
-
-                          <button
-                            type="button"
-                            class="btn btn--sm"
-                            mat-flat-button
-                            [color]="'primary'"
-                            (click)="uploadProfilePictureFile.click()"
-                          >
-                            {{
-                              tutorAdditionalInfoForm.get("profilePictureUrl")
-                                ?.value
-                                ? ("FileUpload.Change" | translate)
-                                : ("FileUpload.BrowseFiles" | translate)
-                            }}
-                          </button>
-                        </div>
-                      </div>
-
-                      <input
-                        hidden
-                        type="file"
-                        accept="image/*"
-                        #uploadProfilePictureFile
-                        (change)="
-                          onProfilePictureFileSelected(
-                            $event,
-                            uploadProfilePictureFile
-                          )
-                        "
-                      />
-                    </div>
-                  </div>
                   <mat-form-field
                     appearance="fill"
                     class="w-full"
